fix screen overflow to min-height

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,10 +154,7 @@ body {
 
 .app-main {
   background-color: white;
-  height: 1200px;
-  overflow-y: auto;
-
-  /* min-height: -webkit-fill-available; */
+  min-height: calc(100vh - 67px);
 }
 
 .main-dashboard {
